Fixed color-contrast sometimes making odd choices

--- a/scss/configuration/bootstrap/_misc.scss
+++ b/scss/configuration/bootstrap/_misc.scss
@@ -5,3 +5,4 @@ $grid-gutter-width: 0 !default;
 $line-height-base:  1.6 !default;
 $line-height-sm:    1.4 !default;
 $line-height-lg:    2.1 !default;
+$min-contrast-ratio: 3 !default;
